2002-11-15  Mo DeJong  <mdejong@uncounted.org>

	* db/dbdump.c:
	* db/dbimp.c:
	* db/dbutils.c:
	* db/dbutils.h: 
	* hyper/dbsym.c:
	* hyper/sn.h:
	* hyper/sninit.c:
	* hyper/tkTreeTable.c:
	* hyper/win/winMain.c:
	* parsers/cpp/skeleton.c:
	* parsers/cpp/cpplib/macread.c:
	* snavigator/win/winCon.c:
	Fix compiler warnings by adding casts
	and consts where needed. Also init some
	variables that could have been used
	without an init. No functional changes.

2002-11-15  Mo DeJong  <mdejong@uncounted.org>

	* Makefile.in: Regen.
	* configure: Regen.
	* configure.in: Invoke AC_CANONICAL_HOST
	and AC_CHECK_TOOL so that cross compiling
	works correctly. Invoke AC_CONFIG_AUX_DIR
	so configure knows where to look for
	config.sub and config.guess.
	* bitmaps/Makefile.in: Regen.
	* db/Makefile.in: Regen.
	* demo/Makefile.in: Regen.
	* doc/Makefile.in: Regen.
	* doc/html/Makefile.in: Regen.
	* etc/Makefile.in: Regen.
	* etc/sn_toolchains/Makefile.in: Regen.
	* gui/Makefile.in: Regen.
	* hyper/Makefile.in: Regen.
	* misc/Makefile.in: Regen.
	* misc/libutils/Makefile.in: Regen.
	* packages/Makefile.in: Regen.
	* parsers/Makefile.in: Regen.
	* parsers/assembly/Makefile.in: Regen.
	* parsers/chill/Makefile.in: Regen.
	* parsers/cobol/Makefile.in: Regen.
	* parsers/common/Makefile.in: Regen.
	* parsers/cpp/Makefile.in: Regen.
	* parsers/cpp/cpplib/Makefile.in: Regen.
	* parsers/fortran/Makefile.in: Regen.
	* parsers/gcj/Makefile.in: Regen.
	* parsers/java/Makefile.in: Regen.
	* parsers/libjcreuse/Makefile.in: Regen.
	* parsers/m4/Makefile.in: Regen.
	* parsers/python/Makefile.in: Regen.
	* parsers/sendmail/Makefile.in: Regen.
	* parsers/tcl/Makefile.in: Regen.
	* parsers/toolbox/Makefile.in: Regen.
	* sdk/Makefile.in: Regen.
	* sdk/api/Makefile.in: Regen.
	* sdk/api/c/Makefile.in: Regen.
	* sdk/api/c/database/Makefile.in: Regen.
	* sdk/api/c/database/examples/Makefile.in: Regen.
	* sdk/api/tcl/Makefile.in: Regen.
	* sdk/api/tcl/database/Makefile.in: Regen.